# harmonize

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  notes.txt  requirements.txt
.devcontainer/: devcontainer.json
api/: TODO.md  api.py  defs.py  requirements.txt
app/Harmonize/: Harmonize.sln
app/Harmonize/Harmonize.Client/: Harmonize.Client.csproj  HarmonizeClient.cs
app/TorreJams/: TorreJams.sln
harmonize/: config.json  database.db  main.py  pyproject.toml  requirements.txt
harmonize/const/: __init__.py
harmonize/defs/: metadata.py
harmonize/harmonize/config/: __init__.py  harmonizeconfig.py  harmonizesecrets.py
harmonize/harmonize/const/: __init__.py
harmonize/harmonize/db/: database.py  models.py  wipe_and_seed.py
harmonize/harmonize/defs/: addtorrentrequest.py  health.py  job.py  magnetlink.py  magnetlinksearchresult.py  media.py  metadata.py  musicbrainz.py  playlist.py  qbt.py  response.py  season.py  transferprogress.py  youtube.py
harmonize/harmonize/file/: drive.py
harmonize/harmonize/job/: __init__.py  callback.py  methods.py  stoppablethread.py
harmonize/harmonize/logger/: ytdlplogger.py
harmonize/harmonize/qbt/: qbt.py
harmonize/harmonize/router/: download.py  health.py  job.py  list.py  media.py  metadata.py  playlist.py  qbt.py  search.py  season.py  stream.py  transfer.py  youtube.py
harmonize/harmonize/scrape/: __init__.py  piratebay.py  xt1337.py
harmonize/harmonize/transfer/: mediasystem.py
harmonize/harmonize/util/: fetch.py  filepropety.py  metadata.py
harmonize/harmonize/vpn/: status.py
harmonize/router/: metadata.py  stream.py
musictool-frontend/: README.md  angular.json  bun.lockb  package.json
musictool-frontend/certs/: server.crt  server.key
musictool-frontend/public/: manifest.webmanifest
musictool-frontend/src/: index.html  proxy.conf.json
scripts/: install-dependencies.sh  run-maui-windows.ps1
server/harmonize/: main.py  requirements.txt
test/: Harmonize-Insomnium  TorreJamsTests  conftest.py  test_download.py  test_job.py  test_media.py  test_playlist.py  test_qbt.py  test_scrape.py  test_search.py  test_season.py  test_transfer.py
(+192 files in other folders)
